# FountTUI

./: .gitignore  Big-Fish.fountain  CHANGELOG.md  Cargo.toml  Goals.md  PRIVACY.md  README.md  To-Do.md  Tutorial.fountain  build.rs  fount.conf.example  fount.save  test_output.txt
.github/workflows/: msix-pipeline.yml  release-github.yml  release-windows-msix.yml  release-winget.yml  release.yml  test-msi.yml  test-msix.yml
assets/: shortcuts.txt  tutorial.fountain
assets/icons/: FountCLI Logo.af  FountTUI_Banner.af
benches/: engine_bench.rs
docs/RELEASES/: README_Linux.txt  README_Windows.txt  README_macOS.txt
docs/readme/: linux.txt  macos.txt  windows.txt
docs/todo/: Minor Stuffs.md  Modularization_Segregation.md  improvement_ideas.md  improvements.md  msix_store_submission.md  plugin_architecture.md  todo.md
packaging/aur/: PKGBUILD
packaging/msix/: AppxManifest.xml  generate_assets.sh
scripts/: install.sh
src/: app.rs  config.rs  export.rs  formatting.rs  layout.rs  lib.rs  main.rs  parser.rs  theme.rs  types.rs
src/app/: editor.rs  file_picker.rs  input.rs  mod.rs  shortcuts.rs  snapshot.rs  sprint.rs  tests.rs  ui.rs
src/app/input/: command.rs  mod.rs  navigation.rs  normal.rs  panes.rs
src/app/methods/: analysis.rs  commands.rs  editing.rs  io.rs  planning.rs
src/app/planning/: mod.rs
src/app/tests/: editing.rs  navigation.rs  ui.rs
src/app/ui/: mod.rs
src/app/ui/panes/: home.rs  index_cards.rs  mod.rs  xray.rs
src/pdf/: export.rs  mod.rs  parser.rs  rich_string.rs  screenplay.rs
src/pdf/export/: html.rs  pdf.rs  style.css
todo/: improvement_ideas.md
wix/: LICENSE.rtf  main.wxs
