[package]
name = "fount"
version = "0.2.17"
authors = [
    "René Coignard <contact@renecoignard.com>"
]
edition = "2024"
description = "A terminal-based Fountain screenplay editor"
license = "GPL-3.0-only"
homepage = "https://github.com/BeetleBot/Fount"
repository = "https://github.com/BeetleBot/Fount"

[package.metadata]
forked_from = "https://github.com/coignard/lottie"
readme = "To-Do.md"
keywords = ["screenwriting", "fountain", "tui", "editor"]
categories = ["text-editors", "command-line-utilities"]

[lib]
name = "fount"
path = "src/lib.rs"

[[bin]]
name = "fount"
path = "src/main.rs"

[dependencies]
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
unicode-width = "0.2.0"
regex = "1.11.1"
clap = { version = "4.5.23", features = ["derive"] }
directories = "6.0.0"
clipboard-win = "5.4.0"
supports-unicode = "3.0.0"
supports-color = "3.0.2"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.5.0"

[[bench]]
name = "engine_bench"
harness = false
